# NoteVault

./: README.md  setup.cfg
src/NoteVault/: config.py  database.py  logger.py  main.py  password.py
