[metadata]
name = NoteVault
version = 1.0.0
description = A minimalistic secure notes storage app
author = Andrey Sigorskikh
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir=
    =src
packages=find:
install_requires =
    glfw==2.7.0
    cryptography==43.0.0
    imgui==2.0.0
    numpy==2.0.1
    pydantic==2.8.2
    PyOpenGL==3.1.7
python_requires = >=3.10
zip_safe = no

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    note-vault = NoteVault.main:main
